Update locales and translations

--- a/source/locale/de_DE/LC_MESSAGES/install/advanced-configuration.po
+++ b/source/locale/de_DE/LC_MESSAGES/install/advanced-configuration.po
@@ -1,5 +1,5 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2019, GLPI Project, Teclib'
+# Copyright (C) 2016-2020, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-02 07:51+0100\n"
+"POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2019-11-18 19:58+0000\n"
 "Last-Translator: Administrator System, 2019\n"
 "Language-Team: German (Germany) (https://www.transifex.com/glpi/teams/87042/de_DE/)\n"
@@ -34,12 +34,8 @@ msgid ""
 "Once installation is done, you can update the ``config/config_db.php`` to "
 "define SSL connection parameters. Available parameters corresponds to "
 "parameters used by `mysqli::ssl_set() <https://www.php.net/manual/en/mysqli"
-".ssl-set.php>`:"
+".ssl-set.php>`_:"
 msgstr ""
-"Sobald die Installation beendet ist, können Sie ``config/config_db.php`` "
-"updaten, um die SSL-Verbindungsparameter zu definieren. Die verfügbaren "
-"Parameter entsprechen denen in `mysqli::ssl_set() "
-"<https://www.php.net/manual/en/mysqli.ssl-set.php>` genutzten:"
 
 #: ../../source/install/advanced-configuration.rst:12
 msgid "``$dbssl`` defines if connection should use SSL (`false` per default)"
