--- a/source/locale/bg_BG/LC_MESSAGES/install/index.po
+++ b/source/locale/bg_BG/LC_MESSAGES/install/index.po
@@ -1,19 +1,19 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2019, GLPI Project, Teclib'
+# Copyright (C) 2016-2020, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Zornitsa Koleva <zornitsa.koleva@mr-bricolage.bg>, 2019
+# Z K <zornitsa.koleva@mr-bricolage.bg>, 2020
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-02 07:51+0100\n"
+"POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Zornitsa Koleva <zornitsa.koleva@mr-bricolage.bg>, 2019\n"
+"Last-Translator: Z K <zornitsa.koleva@mr-bricolage.bg>, 2020\n"
 "Language-Team: Bulgarian (Bulgaria) (https://www.transifex.com/glpi/teams/87042/bg_BG/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,35 +27,39 @@ msgstr ""
 
 #: ../../source/install/index.rst:4
 msgid "Proceed as follow:"
-msgstr ""
+msgstr "Продължете както следва:"
 
 #: ../../source/install/index.rst:6
 msgid "Choose a version,"
-msgstr "Избери версия,"
+msgstr "Изберете версия;"
 
 #: ../../source/install/index.rst:7
 msgid "Download the archive,"
-msgstr "Свали архива,"
+msgstr "Изтеглете архива,"
 
 #: ../../source/install/index.rst:8
 msgid "Install :)"
-msgstr "Инсталирай :)"
+msgstr "Инсталирайте :)"
 
 #: ../../source/install/index.rst:11
 msgid "Choose a version"
-msgstr "Избери версия"
+msgstr "Изберете версия"
 
 #: ../../source/install/index.rst:15
 msgid ""
 "It is hightly recommended you choose the latest stable release for a "
 "production usage."
 msgstr ""
+"Силно препоръчително е да изберете най-новата стабилна версия за "
+"продуктивната Ви система."
 
 #: ../../source/install/index.rst:17
 msgid ""
 "GLPI follows a semantic versioning scheme, on 3 digits. The first one is the"
 " major release, the second the minor and the third the fix release."
 msgstr ""
+"GLPI следва семантична схема за версиите с 3 цифри. Първата е основната "
+"версия, втората е второстепенната и третата е с поправки по версията."
 
 #: ../../source/install/index.rst:19
 msgid ""
@@ -63,21 +67,28 @@ msgid ""
 "features; minor versions may bring new features as well, but stay perfectly "
 "compatible inside a major version."
 msgstr ""
+"Основните версии могат да дойдат с важни несъвместимости, както и нови "
+"функции; фторостепенните версии могат да донесат и нови функции, но остават "
+"напълно съвместими с основната версия."
 
 #: ../../source/install/index.rst:21
 msgid ""
 "Fixes releases will only fix reported issues without adding anything new."
 msgstr ""
+"Версииите с поправки коригират само докладвани проблеми, без да добавят нищо"
+" ново."
 
 #: ../../source/install/index.rst:24
 msgid "Download"
-msgstr "Свали"
+msgstr "Изтегляне"
 
 #: ../../source/install/index.rst:28
 msgid ""
 "On GitHub, there are always two archives named *Source code* which should "
 "not be used."
 msgstr ""
+"В GitHub, винаги има 2 архива с име *Source code* , които не трябва да се "
+"използват."
 
 #: ../../source/install/index.rst:30
 msgid ""
