--- a/source/locale/bg_BG/LC_MESSAGES/install/wizard.po
+++ b/source/locale/bg_BG/LC_MESSAGES/install/wizard.po
@@ -1,19 +1,19 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2019, GLPI Project, Teclib'
+# Copyright (C) 2016-2020, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Zornitsa Koleva <zornitsa.koleva@mr-bricolage.bg>, 2019
+# Z K <zornitsa.koleva@mr-bricolage.bg>, 2020
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-02 07:51+0100\n"
+"POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Zornitsa Koleva <zornitsa.koleva@mr-bricolage.bg>, 2019\n"
+"Last-Translator: Z K <zornitsa.koleva@mr-bricolage.bg>, 2020\n"
 "Language-Team: Bulgarian (Bulgaria) (https://www.transifex.com/glpi/teams/87042/bg_BG/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,6 +45,8 @@ msgid ""
 "The first step will let you choose the installation language. Select your "
 "lang, and click validate."
 msgstr ""
+"Първата стъпка ще Ви позволи да изберете езика за инсталацията. Изберете "
+"език и натиснете валидиране."
 
 #: ../../source/install/wizard.rst:20
 msgid "License"
@@ -105,6 +107,8 @@ msgid ""
 "*MySQL server*: enter the path to your MySQL server, `localhost` or "
 "`mysql.domaine.tld` as example;"
 msgstr ""
+"*MySQL server*: въведете пътя на Вашия MySQL сървър, `localhost` или "
+"`mysql.domaine.tld` например;"
 
 #: ../../source/install/wizard.rst:66
 msgid ""
@@ -142,7 +146,7 @@ msgstr ""
 
 #: ../../source/install/wizard.rst:85
 msgid "use an existing database"
-msgstr ""
+msgstr "използвай съществуваща база данни"
 
 #: ../../source/install/wizard.rst:87
 msgid "Select this database in the displayed list. Validate to use."
