--- a/source/locale/bg_BG/LC_MESSAGES/update.po
+++ b/source/locale/bg_BG/LC_MESSAGES/update.po
@@ -1,19 +1,19 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2019, GLPI Project, Teclib'
+# Copyright (C) 2016-2020, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Zornitsa Koleva <zornitsa.koleva@mr-bricolage.bg>, 2019
+# Z K <zornitsa.koleva@mr-bricolage.bg>, 2020
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-02 07:51+0100\n"
+"POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Zornitsa Koleva <zornitsa.koleva@mr-bricolage.bg>, 2019\n"
+"Last-Translator: Z K <zornitsa.koleva@mr-bricolage.bg>, 2020\n"
 "Language-Team: Bulgarian (Bulgaria) (https://www.transifex.com/glpi/teams/87042/bg_BG/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,6 +49,10 @@ msgid ""
 "is then automated. To start it, just go to your GLPI instance URI, or "
 "(recommended) use the :doc:`command line tools <command-line>`."
 msgstr ""
+"Първо, изтеглете най-новата версия на GLPI и разархивирайте файловете. След "
+"това процесът на актуализиране на GLPI е автоматичен. За да го стартирате, "
+"просто отидете на вашия GLPI инстанция URI или (препоръчително) използвайте:"
+" doc: `инструменти за командния ред  <command-line>`."
 
 #: ../../source/update.rst:14
 msgid ""
@@ -71,21 +75,6 @@ msgstr ""
 msgid ""
 "Make sure your database is empty before restoring your backup and try to "
 "update, and repeat on fail."
-msgstr ""
-
-#: ../../source/update.rst:28
-msgid ""
-"From the beginning, it was possible to update to any GLPI version from any "
-"older version. But this requires a lot of work to maintain such an amount of"
-" very, very old code (that can't even be tested!)..."
-msgstr ""
-
-#: ../../source/update.rst:30
-msgid ""
-"We've decided to support migrations from GLPI 0.80 only. If you want to "
-"update from an older version, you'll need to proceed in two steps: first "
-"updating to 9.4.x (even if any version >= 0.80 would work, it's maybe a good"
-" step to go to latest stable before), then to >= 10.x."
 msgstr ""
 
 #: ../../<rst_epilog>:2
