--- a/source/locale/en_US/LC_MESSAGES/index.po
+++ b/source/locale/en_US/LC_MESSAGES/index.po
@@ -4,7 +4,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# liAnGjiA <liangjia@qq.com>, 2018
+# Shawn Long <webaccounts@kkg.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -13,23 +13,25 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: liAnGjiA <liangjia@qq.com>, 2018\n"
-"Language-Team: Chinese Simplified (https://www.transifex.com/glpi/teams/87042/zh-Hans/)\n"
+"Last-Translator: Shawn Long <webaccounts@kkg.org>, 2019\n"
+"Language-Team: English (United States) (https://www.transifex.com/glpi/teams/87042/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh-Hans\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: en_US\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../source/index.rst:7
 msgid "GLPI installation"
-msgstr "安装GLPI"
+msgstr "GLPI Installation"
 
 #: ../../source/index.rst:9
 msgid ""
 "This documentation presents `GLPI <http://glpi-project.org>`_ installation "
 "instructions."
 msgstr ""
+"This documentation presents `GLPI <http://glpi-project.org>`_ installation "
+"instructions."
 
 #: ../../source/index.rst:11
 msgid ""
@@ -39,7 +41,12 @@ msgid ""
 "issues, from hardware components and software inventories management to user"
 " helpdesk management."
 msgstr ""
+":abbr:`GLPI (Gestion Libre de Parc Informatique)` is a free (as in \"free "
+"speech\" not as in \"free beer\"!) asset and helpdesk management solution "
+"accessible from a web browser built to manage all your asset management "
+"issues, from hardware components and software inventories management to user"
+" helpdesk management."
 
 #: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
-msgstr "|CC-by-NC-ND|"
+msgstr "|ccbyncnd|"
