--- a/source/locale/en_US/LC_MESSAGES/install/advanced-configuration.po
+++ b/source/locale/en_US/LC_MESSAGES/install/advanced-configuration.po
@@ -4,7 +4,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Z K <zornitsa.koleva@mr-bricolage.bg>, 2019
+# Shawn Long <webaccounts@kkg.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -13,21 +13,21 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2019-11-18 19:58+0000\n"
-"Last-Translator: Z K <zornitsa.koleva@mr-bricolage.bg>, 2019\n"
-"Language-Team: Bulgarian (Bulgaria) (https://www.transifex.com/glpi/teams/87042/bg_BG/)\n"
+"Last-Translator: Shawn Long <webaccounts@kkg.org>, 2019\n"
+"Language-Team: English (United States) (https://www.transifex.com/glpi/teams/87042/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: bg_BG\n"
+"Language: en_US\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../source/install/advanced-configuration.rst:2
 msgid "Advanced configuration"
-msgstr "Допълнителна конфигурация"
+msgstr "Advanced Configuration"
 
 #: ../../source/install/advanced-configuration.rst:5
 msgid "SSL connection to database"
-msgstr "SSL връзка към базата"
+msgstr "SSL connection to database"
 
 #: ../../source/install/advanced-configuration.rst:9
 msgid ""
@@ -40,32 +40,39 @@ msgstr ""
 #: ../../source/install/advanced-configuration.rst:12
 msgid "``$dbssl`` defines if connection should use SSL (`false` per default)"
 msgstr ""
+"``$dbssl`` defines if the connection should use SSL (`false` per default)"
 
 #: ../../source/install/advanced-configuration.rst:13
 msgid "``$dbsslkey`` path name to the key file (`null` per default)"
-msgstr ""
+msgstr "``$dbsslkey`` path name to the key file (`null` per default)"
 
 #: ../../source/install/advanced-configuration.rst:14
 msgid "``$dbsslcert`` path name to the certificate file (`null` per default)"
-msgstr "``$dbsslcert`` пътя до файла със сертификата (`null` по подразбиране)"
+msgstr "``$dbsslcert`` path name to the certificate file (`null` per default)"
 
 #: ../../source/install/advanced-configuration.rst:15
 msgid ""
 "``$dbsslca`` path name to the certificate authority file (`null` per "
 "default)"
 msgstr ""
+"``$dbsslca`` path name to the certificate authority file (`null` per "
+"default)"
 
 #: ../../source/install/advanced-configuration.rst:16
 msgid ""
 "``$dbsslcapath`` pathname to a directory that contains trusted SSL CA "
 "certificates in PEM format (`null` per default)"
 msgstr ""
+"``$dbsslcapath`` pathname to a directory that contains trusted SSL CA "
+"certificates in PEM format (`null` per default)"
 
 #: ../../source/install/advanced-configuration.rst:17
 msgid ""
 "``$dbsslcacipher`` list of allowable ciphers to use for SSL encryption "
 "(`null` per default)"
 msgstr ""
+"``$dbsslcacipher`` list of allowable ciphers to use for SSL encryption "
+"(`null` per default)"
 
 #: ../../source/install/advanced-configuration.rst:21
 msgid ""
@@ -73,6 +80,9 @@ msgid ""
 "during the installation process. It has to be done once installation has "
 "been done."
 msgstr ""
+"For now it is not possible to define SSL connection parameters prior or "
+"during the installation process. It has to be done once installation has "
+"been done."
 
 #: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
