--- a/source/locale/en_US/LC_MESSAGES/prerequisites.po
+++ b/source/locale/en_US/LC_MESSAGES/prerequisites.po
@@ -4,9 +4,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Johan Cwiklinski <jcwiklinski@teclib.com>, 2018
-# Wanderlei Hüttel <wanderlei.huttel@gmail.com>, 2018
-# Rodrigo de Almeida Sottomaior Macedo <rmsolucoeseminformatic4@gmail.com>, 2020
+# Shawn Long <webaccounts@kkg.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -15,25 +13,25 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Rodrigo de Almeida Sottomaior Macedo <rmsolucoeseminformatic4@gmail.com>, 2020\n"
-"Language-Team: Portuguese (Brazil) (https://www.transifex.com/glpi/teams/87042/pt_BR/)\n"
+"Last-Translator: Shawn Long <webaccounts@kkg.org>, 2019\n"
+"Language-Team: English (United States) (https://www.transifex.com/glpi/teams/87042/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: en_US\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../source/prerequisites.rst:2
 msgid "Prerequisites"
-msgstr "Pré-requisitos"
+msgstr "Prerequisites"
 
 #: ../../source/prerequisites.rst:4
 msgid "GLPI is a Web application that will need:"
-msgstr "GLPI é um aplicativo da Web que precisará:"
+msgstr "GLPI is a web application that will need:"
 
 #: ../../source/prerequisites.rst:6
 msgid "a webserver;"
-msgstr "um servidor web;"
+msgstr "a webserver;"
 
 #: ../../source/prerequisites.rst:7
 msgid "PHP;"
@@ -41,19 +39,19 @@ msgstr "PHP;"
 
 #: ../../source/prerequisites.rst:8
 msgid "a database."
-msgstr "um banco de dados."
+msgstr "a database."
 
 #: ../../source/prerequisites.rst:11
 msgid "Web server"
-msgstr "Servidor Web"
+msgstr "web server"
 
 #: ../../source/prerequisites.rst:13
 msgid "GLPI requires a web server that supports PHP, like:"
-msgstr "GLPI requer um servidor web que ofereça suporte a PHP, como:"
+msgstr "GLPI requires a web server that supports PHP, like:"
 
 #: ../../source/prerequisites.rst:15
 msgid "`Apache 2 (or more recent) <http://httpd.apache.org>`_;"
-msgstr "`Apache 2 (ou mais recente) <http://httpd.apache.org>`_;"
+msgstr "`Apache 2 (or more recent) <http://httpd.apache.org>`_;"
 
 #: ../../source/prerequisites.rst:16
 msgid "`Nginx <http://nginx.org/>`_;"
@@ -77,53 +75,48 @@ msgid ""
 "We recommend to use the most recent stable PHP release for better "
 "performances."
 msgstr ""
-"Recomendamos o uso da versão estável do PHP mais recente para obter melhores"
-" desempenhos."
+"We recommend to use the most recent stable PHP release for better "
+"performances."
 
 #: ../../source/prerequisites.rst:29
 msgid "Mandatory extensions"
-msgstr "Extensões obrigatórias"
+msgstr "Mandatory Extensions"
 
 #: ../../source/prerequisites.rst:31
 msgid "Following PHP extensions are required for the app to work properly:"
-msgstr ""
-"As seguintes extensões PHP são necessárias para que o aplicativo funcione "
-"corretamente:"
+msgstr "Following PHP extensions are required for the app to work properly:"
 
 #: ../../source/prerequisites.rst:33
 msgid "``curl``: for CAS authentication, GLPI version check, Telemetry, ...;"
-msgstr ""
-"``curl``: para autenticação CAS, verificação de versão do GLPI, Telemetria, "
-"etc;"
+msgstr "``curl``: for CAS authentication, GLPI version check, Telemetry, ...;"
 
 #: ../../source/prerequisites.rst:34
 msgid "``fileinfo``: to get extra informations on files;"
-msgstr "``fileinfo``: para obter informações extras dos arquivos;"
+msgstr "``fileinfo``: to get extra information on files;"
 
 #: ../../source/prerequisites.rst:35
 msgid "``gd``: to generate images;"
-msgstr "``gd``: para gerar imagens;"
+msgstr "``gd``: to generate images;"
 
 #: ../../source/prerequisites.rst:36
 msgid "``json``: to get support for JSON data format;"
-msgstr "``json``: para obter suporte para o formato de dados JSON;"
+msgstr "``json``: to get support for JSON data format;"
 
 #: ../../source/prerequisites.rst:37
 msgid "``mbstring``:  to manage multi bytes characters;"
-msgstr "``mbstring``: gerenciar caracteres multibytes;"
+msgstr "``mbstring``:  to manage multi bytes characters;"
 
 #: ../../source/prerequisites.rst:38
 msgid "``mysqli``: to connect and query the database;"
-msgstr "``mysqli``: para conectar e consultar o banco de dados;"
+msgstr "``mysqli``: to connect and query the database;"
 
 #: ../../source/prerequisites.rst:39
 msgid "``session``: to get user sessions support;"
-msgstr "``session``: para obter suporte a sessões de usuários;"
+msgstr "``session``: to get user sessions support;"
 
 #: ../../source/prerequisites.rst:40
 msgid "``zlib``: to get backup and restore database functions;"
-msgstr ""
-"``zlib``: para efetuar backup e restaurar as funções da base de dados;"
+msgstr "``zlib``: to get backup and restore database functions;"
 
 #: ../../source/prerequisites.rst:41
 msgid "``simplexml``;"
@@ -139,49 +132,48 @@ msgstr ""
 
 #: ../../source/prerequisites.rst:46
 msgid "Optional extensions"
-msgstr "Extensões opcionais"
+msgstr "Optional extensions"
 
 #: ../../source/prerequisites.rst:50
 msgid ""
 "Even if those extensions are not mandatory, we advise you to install them "
 "anyways."
 msgstr ""
-"Mesmo que essas extensões não sejam obrigatórias, recomendamos que você as "
-"instale de qualquer maneira."
+"Even if those extensions are not mandatory, we advise you to install them "
+"anyways."
 
 #: ../../source/prerequisites.rst:52
 msgid "Following PHP extensions are required for some extra features of GLPI:"
 msgstr ""
-"As seguintes extensões PHP são necessárias para alguns recursos extras do "
-"GLPI:"
+"Following PHP extensions are required for some extra features of GLPI:"
 
 #: ../../source/prerequisites.rst:54
 msgid ""
 "``cli``: to use PHP from command line (scripts, automatic actions, and so "
 "on);"
 msgstr ""
-"``cli``: usar o PHP a partir da linha de comando (scripts, ações "
-"automáticas, etc.);"
+"``cli``: to use PHP from command line (scripts, automatic actions, and so "
+"on);"
 
 #: ../../source/prerequisites.rst:55
 msgid "``domxml``: used for CAS authentication;"
-msgstr "``domxml``: usado para autenticação CAS;"
+msgstr "``domxml``: used for CAS authentication;"
 
 #: ../../source/prerequisites.rst:56
 msgid "``imap``: used for mail collector ou user authentication;"
-msgstr "``imap``: usado para coletar emails ou autenticação de usuário;"
+msgstr "``imap``: used for mail collector on user authentication;"
 
 #: ../../source/prerequisites.rst:57
 msgid "``ldap``:  use LDAP directory for authentication;"
-msgstr "``ldap``: usar o diretório LDAP para autenticação;"
+msgstr "``ldap``:  use LDAP directory for authentication;"
 
 #: ../../source/prerequisites.rst:58
 msgid "``openssl``: secured communications;"
-msgstr "``openssl``: comunicações seguras;"
+msgstr "``openssl``: secured communications;"
 
 #: ../../source/prerequisites.rst:59
 msgid "``xmlrpc``: used for XMLRPC API."
-msgstr "`` xmlrpc``: usado para a API XMLRPC."
+msgstr "``xmlrpc``: used for XMLRPC API."
 
 #: ../../source/prerequisites.rst:60
 msgid ""
@@ -189,25 +181,25 @@ msgid ""
 "(in french only) <http://glpi-user-"
 "documentation.readthedocs.io/fr/latest/advanced/cache.html>`_."
 msgstr ""
-"`APCu``: pode ser usado para cache; entre outros (veja `configuração de "
-"caching (somente em francês) <http://glpi-user-"
-"documentation.readthedocs.io/fr/latest/advanced/cache.html>`"
+"``APCu``: may be used for cache; among others (see `caching configuration "
+"(in french only) <http://glpi-user-"
+"documentation.readthedocs.io/fr/latest/advanced/cache.html>`_."
 
 #: ../../source/prerequisites.rst:63
 msgid "Configuration"
-msgstr "Configuração"
+msgstr "Configuration"
 
 #: ../../source/prerequisites.rst:65
 msgid ""
 "PHP configuration file (``php.ini``) must be adapted to reflect following "
 "variables:"
 msgstr ""
-"O arquivo de configuração do PHP (``php.ini``) pode ser adaptado para "
-"refletir as seguintes variáveis:"
+"PHP configuration file (``php.ini``) must be adapted to reflect following "
+"variables:"
 
 #: ../../source/prerequisites.rst:76
 msgid "Database"
-msgstr "Banco de dados"
+msgstr "Database"
 
 #: ../../source/prerequisites.rst:80
 msgid ""
@@ -215,13 +207,13 @@ msgid ""
 "<https://mariadb.com>`_ (10.0 minimum) database servers are supported by "
 "GLPI."
 msgstr ""
-"Atualmente, apenas os servidores de banco de dados `MySQL "
-"<https://dev.mysql.com>` _ (5.6 mínimo) e `MariaDB <https://mariadb.com>` _ "
-"(10.0 mínimo) são suportados pelo GLPI."
+"Currently, only `MySQL <https://dev.mysql.com>`_ (5.6 minimum) and `MariaDB "
+"<https://mariadb.com>`_ (10.0 minimum) database servers are supported by "
+"GLPI."
 
 #: ../../source/prerequisites.rst:82
 msgid "In order to work, GLPI requires a database server."
-msgstr "Para funcionar, o GLPI requer um servidor de banco de dados."
+msgstr "In order to work, GLPI requires a database server."
 
 #: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
