--- a/source/locale/fr_FR/LC_MESSAGES/install/advanced-configuration.po
+++ b/source/locale/fr_FR/LC_MESSAGES/install/advanced-configuration.po
@@ -4,7 +4,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Z K <zornitsa.koleva@mr-bricolage.bg>, 2019
+# Pierre Puiseux <ppuiseux@henix.fr>, 2020
+# Johan Cwiklinski <jcwiklinski@teclib.com>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -13,21 +14,21 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2019-11-18 19:58+0000\n"
-"Last-Translator: Z K <zornitsa.koleva@mr-bricolage.bg>, 2019\n"
-"Language-Team: Bulgarian (Bulgaria) (https://www.transifex.com/glpi/teams/87042/bg_BG/)\n"
+"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2020\n"
+"Language-Team: French (France) (https://www.transifex.com/glpi/teams/87042/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: bg_BG\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: fr_FR\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../../source/install/advanced-configuration.rst:2
 msgid "Advanced configuration"
-msgstr "Допълнителна конфигурация"
+msgstr "Configuration avancée"
 
 #: ../../source/install/advanced-configuration.rst:5
 msgid "SSL connection to database"
-msgstr "SSL връзка към базата"
+msgstr "Connexion SSL à la base de données"
 
 #: ../../source/install/advanced-configuration.rst:9
 msgid ""
@@ -36,18 +37,23 @@ msgid ""
 "parameters used by `mysqli::ssl_set() <https://www.php.net/manual/en/mysqli"
 ".ssl-set.php>`_:"
 msgstr ""
+"Une fois l'installation terminée, vous pouvez mettre à jour le fichier "
+"``config/config_db.php`` pour définir les paramètres de connexion SSL. Les "
+"paramètres disponibles correspondent à  `mysqli::ssl_set() "
+"<https://www.php.net/manual/fr/mysqli.ssl-set.php>`_ :"
 
 #: ../../source/install/advanced-configuration.rst:12
 msgid "``$dbssl`` defines if connection should use SSL (`false` per default)"
 msgstr ""
+"``$dbssl`` défini si la connexion doit utiliser SSL (`false` par défaut)"
 
 #: ../../source/install/advanced-configuration.rst:13
 msgid "``$dbsslkey`` path name to the key file (`null` per default)"
-msgstr ""
+msgstr "``$dbsslkey`` chemin vers le fichier de clé (`null` par défaut)"
 
 #: ../../source/install/advanced-configuration.rst:14
 msgid "``$dbsslcert`` path name to the certificate file (`null` per default)"
-msgstr "``$dbsslcert`` пътя до файла със сертификата (`null` по подразбиране)"
+msgstr ""
 
 #: ../../source/install/advanced-configuration.rst:15
 msgid ""
