--- a/source/locale/fr_FR/LC_MESSAGES/install/index.po
+++ b/source/locale/fr_FR/LC_MESSAGES/install/index.po
@@ -1,20 +1,20 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2019, GLPI Project, Teclib'
+# Copyright (C) 2016-2020, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Anth Paw <chpego@chpego.fr>, 2018
-# Johan Cwiklinski <jcwiklinski@teclib.com>, 2018
+# Johan Cwiklinski <jcwiklinski@teclib.com>, 2020
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-02 07:51+0100\n"
+"POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2018\n"
+"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2020\n"
 "Language-Team: French (France) (https://www.transifex.com/glpi/teams/87042/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -157,6 +157,9 @@ msgid ""
 "If you need to set advanced configuration, like SSL connection parameters, "
 "please refer to :doc:`advanced configuration <advanced-configuration>`."
 msgstr ""
+"Si vous avez besoin de configuration avancée, comme la mise en place de "
+"paramètres de connexion SSL, référez-vous à :doc:`la configuration avancée "
+"<advanced-configuration>`."
 
 #: ../../source/install/index.rst:50
 msgid "Files and directories locations"
@@ -297,6 +300,9 @@ msgid ""
 "GLPI looks for a `local_define.php` file in its own `config` directory. If "
 "you want to use one form new config directory, you have to load it."
 msgstr ""
+"GLPI cherche un fichier `local_define.php` dans son propre dossier  "
+"`config`. Si vous souhaitez en utiliser un depuis un autre dossier, vous "
+"devez le charger."
 
 #: ../../source/install/index.rst:98
 msgid ""
