--- a/source/locale/pt_BR/LC_MESSAGES/install/wizard.po
+++ b/source/locale/pt_BR/LC_MESSAGES/install/wizard.po
@@ -1,19 +1,20 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2019, GLPI Project, Teclib'
+# Copyright (C) 2016-2020, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Wanderlei Hüttel <wanderlei.huttel@gmail.com>, 2018
+# Rodrigo de Almeida Sottomaior Macedo <rmsolucoeseminformatic4@gmail.com>, 2020
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-02 07:51+0100\n"
+"POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Wanderlei Hüttel <wanderlei.huttel@gmail.com>, 2018\n"
+"Last-Translator: Rodrigo de Almeida Sottomaior Macedo <rmsolucoeseminformatic4@gmail.com>, 2020\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/glpi/teams/87042/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -97,12 +98,17 @@ msgid ""
 "possible to continue and an explicit error message will tell you about what "
 "is wrong and what to do before trying again."
 msgstr ""
+"Esta etapa verificará se os pré-requisitos foram atendidos. Caso contrário, "
+"não é possível continuar e uma mensagem de erro explícita informará o que "
+"está errado e o que fazer antes de tentar novamente."
 
 #: ../../source/install/wizard.rst:53
 msgid ""
 "Some prerequisites are optionals, it will be possible to continue "
 "installation event if they're not met."
 msgstr ""
+"Alguns pré-requisitos são opcionais, será possível continuar o evento de "
+"instalação se eles não forem atendidos."
 
 #: ../../source/install/wizard.rst:56
 msgid "Database connection"
@@ -262,6 +268,8 @@ msgid ""
 "Before removing the ``glpi`` account, please make sure you have created "
 "another user with ``super-admin`` profile."
 msgstr ""
+"Antes de remover a conta ``glpi``, verifique se você criou outro usuário com"
+" o perfil ``super-admin``."
 
 #: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
