--- a/source/locale/pt_BR/LC_MESSAGES/update.po
+++ b/source/locale/pt_BR/LC_MESSAGES/update.po
@@ -1,19 +1,20 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2019, GLPI Project, Teclib'
+# Copyright (C) 2016-2020, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Wanderlei Hüttel <wanderlei.huttel@gmail.com>, 2018
+# Rodrigo de Almeida Sottomaior Macedo <rmsolucoeseminformatic4@gmail.com>, 2020
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-02 07:51+0100\n"
+"POT-Creation-Date: 2020-06-18 08:55+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Wanderlei Hüttel <wanderlei.huttel@gmail.com>, 2018\n"
+"Last-Translator: Rodrigo de Almeida Sottomaior Macedo <rmsolucoeseminformatic4@gmail.com>, 2020\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/glpi/teams/87042/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,6 +52,10 @@ msgid ""
 "is then automated. To start it, just go to your GLPI instance URI, or "
 "(recommended) use the :doc:`command line tools <command-line>`."
 msgstr ""
+"Primeiro, baixe a versão mais recente do GLPI e extraia os arquivos. O "
+"processo de atualização do GLPI é automatizado. Para iniciá-lo, basta "
+"acessar o URI da instância GLPI ou (recomendado) usar as ferramentas de "
+"linha de comando :doc:` <command-line>`."
 
 #: ../../source/update.rst:14
 msgid ""
@@ -64,6 +69,8 @@ msgstr ""
 msgid ""
 "Please also note the update process will automatically disable your plugins."
 msgstr ""
+"Observe também que o processo de atualização desativará automaticamente seus"
+" plugins."
 
 #: ../../source/update.rst:20
 msgid ""
@@ -81,21 +88,6 @@ msgid ""
 msgstr ""
 "Verifique se o banco de dados está vazio antes de restaurar o backup e tente"
 " atualizar, e repita o processo caso ocorra alguma falha."
-
-#: ../../source/update.rst:28
-msgid ""
-"From the beginning, it was possible to update to any GLPI version from any "
-"older version. But this requires a lot of work to maintain such an amount of"
-" very, very old code (that can't even be tested!)..."
-msgstr ""
-
-#: ../../source/update.rst:30
-msgid ""
-"We've decided to support migrations from GLPI 0.80 only. If you want to "
-"update from an older version, you'll need to proceed in two steps: first "
-"updating to 9.4.x (even if any version >= 0.80 would work, it's maybe a good"
-" step to go to latest stable before), then to >= 10.x."
-msgstr ""
 
 #: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
